feat (LP-05) : implement API get active list payment channels
